fix table overflow issue, and add normalize

--- a/tnybin/static/css/base16-light.css
+++ b/tnybin/static/css/base16-light.css
@@ -18,19 +18,20 @@
 .cm-s-base16-light .CodeMirror-linenumber { color: #b0b0b0; }
 .cm-s-base16-light .CodeMirror-cursor { border-left: 1px solid #505050; }
 
-.cm-s-base16-light span.cm-comment { color: #8f5536; }
-.cm-s-base16-light span.cm-atom { color: #aa759f; }
-.cm-s-base16-light span.cm-number { color: #aa759f; }
+.cm-s-base16-light span.cm-comment { color: #b8b8b8; }
+.cm-s-base16-light span.cm-atom { color: #a1b56c; }
+.cm-s-base16-light span.cm-number { color: #dc9656;}
 
-.cm-s-base16-light span.cm-property, .cm-s-base16-light span.cm-attribute { color: #90a959; }
-.cm-s-base16-light span.cm-keyword { color: #ac4142; }
-.cm-s-base16-light span.cm-string { color: #f4bf75; }
+.cm-s-base16-light span.cm-property, .cm-s-base16-light span.cm-attribute { color: #7cafc2; }
+.cm-s-base16-light span.cm-keyword { color: #ba8baf; }
+.cm-s-base16-light span.cm-string { color: #a1b56c; }
+.cm-s-base16-light span.cm-string-2 { color: #86c1b9; }
 
-.cm-s-base16-light span.cm-variable { color: #90a959; }
-.cm-s-base16-light span.cm-variable-2 { color: #6a9fb5; }
-.cm-s-base16-light span.cm-def { color: #d28445; }
+.cm-s-base16-light span.cm-variable { color: #ab4642; }
+.cm-s-base16-light span.cm-variable-2 { color: #ab4642; }
+.cm-s-base16-light span.cm-def { color: #7cafc2; }
 .cm-s-base16-light span.cm-bracket { color: #202020; }
-.cm-s-base16-light span.cm-tag { color: #ac4142; }
+.cm-s-base16-light span.cm-tag { color: #f7ca88; }
 .cm-s-base16-light span.cm-link { color: #aa759f; }
 .cm-s-base16-light span.cm-error { background: #ac4142; color: #505050; }
 
