--- a/tnybin/static/css/pygments.theme.css
+++ b/tnybin/static/css/pygments.theme.css
@@ -14,8 +14,8 @@
 .highlighttable .err { color: #ac4142 } /* Error */
 .highlighttable .k { color: #aa759f } /* Keyword */
 .highlighttable .l { color: #d28445 } /* Literal */
-.highlighttable .n { color: #151515 } /* Name */
-.highlighttable .o { color: #75b5aa } /* Operator */
+.highlighttable .n { color: #ab4642 } /* Name */
+.highlighttable .o { color: #383838 } /* Operator */
 .highlighttable .p { color: #151515 } /* Punctuation */
 .highlighttable .cm { color: #b0b0b0 } /* Comment.Multiline */
 .highlighttable .cp { color: #b0b0b0 } /* Comment.Preproc */
@@ -31,16 +31,16 @@
 .highlighttable .kc { color: #aa759f } /* Keyword.Constant */
 .highlighttable .kd { color: #aa759f } /* Keyword.Declaration */
 .highlighttable .kn { color: #75b5aa } /* Keyword.Namespace */
-.highlighttable .kp { color: #aa759f } /* Keyword.Pseudo */
+.highlighttable .kp { color: #7cafc2 } /* Keyword.Pseudo */
 .highlighttable .kr { color: #aa759f } /* Keyword.Reserved */
 .highlighttable .kt { color: #f4bf75 } /* Keyword.Type */
 .highlighttable .ld { color: #90a959 } /* Literal.Date */
 .highlighttable .m { color: #d28445 } /* Literal.Number */
 .highlighttable .s { color: #90a959 } /* Literal.String */
 .highlighttable .na { color: #6a9fb5 } /* Name.Attribute */
-.highlighttable .nb { color: #151515 } /* Name.Builtin */
+.highlighttable .nb { color: #ba8baf } /* Name.Builtin */
 .highlighttable .nc { color: #f4bf75 } /* Name.Class */
-.highlighttable .no { color: #ac4142 } /* Name.Constant */
+.highlighttable .no { color: #f7ca88 } /* Name.Constant */
 .highlighttable .nd { color: #75b5aa } /* Name.Decorator */
 .highlighttable .ni { color: #151515 } /* Name.Entity */
 .highlighttable .ne { color: #ac4142 } /* Name.Exception */
@@ -65,7 +65,7 @@
 .highlighttable .sh { color: #90a959 } /* Literal.String.Heredoc */
 .highlighttable .si { color: #d28445 } /* Literal.String.Interpol */
 .highlighttable .sx { color: #90a959 } /* Literal.String.Other */
-.highlighttable .sr { color: #90a959 } /* Literal.String.Regex */
+.highlighttable .sr { color: #86c1b9 } /* Literal.String.Regex */
 .highlighttable .s1 { color: #90a959 } /* Literal.String.Single */
 .highlighttable .ss { color: #90a959 } /* Literal.String.Symbol */
 .highlighttable .bp { color: #151515 } /* Name.Builtin.Pseudo */
